# snpdiffrs

./: .gitignore  Cargo.toml  LICENCE  README.md  perf.sh  todo.txt
.cargo/: config
.github/workflows/: cargo.yml
examples/n_to_m_with_preprocessor/: n_to_m_with_preprocessor.toml
examples/preprocessor/: preprocessor.toml
examples/simple/: simple.toml
examples/simple_with_preprocessor/: simple_with_preprocessor.toml
sample_data/: ERR329501_chr4.bam.bai  GSM1553106_chr4.bam.bai  marsnpdiff_ERR329501.py  marsnpdiff_ERR329501_chr4_vs_GSM1553106_chr4.tsv  marsnpdiff_sample.py  marsnpdiff_sample_a_vs_sample_b.tsv  sample_a.bam  sample_a.bam.bai  sample_b.bam  sample_b.bam.bai
src/: chunked_genome.rs  consts.rs  coverage.rs  main.rs  runner.rs
src/runner/: mod.rs  n_to_m.rs  n_to_n.rs  pre_process.rs  quantify_homopolymers.rs  runner.rs
