[package]
name = "snpdiffrs"
version = "0.1.0"
authors = ["Florian Finkernagel <finkernagel@imt.uni-marburg.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib="0.32.0"
ndarray = { version = "0.13.1", features = ["blas", "approx"] }
blas-src = { version = "0.2.0", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.6.0", default-features = false, features = ["cblas", "system"] }
lazy_static = "1.4.0"
approx = "0.3.2"
serde_derive = "1.0.115"
serde = {version = "1.0.115", features = ["derive"] }
toml = "0.5.6"
itertools = "0.9.0"
ndarray-stats = "0.3.0"
