[package]
name = "snpdiffrs"
version = "0.1.1"
authors = ["Florian Finkernagel <finkernagel@imt.uni-marburg.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib={git = "https://github.com/rust-bio/rust-htslib/"}
# "0.32.0"
ndarray = { version = "0.15.1", features = ["approx", "serde"] }
bincode = "1.3.2"
lazy_static = "1.4.0"
approx = "0.3.2"
serde_derive = "1.0.115"
serde = {version = "1.0.115", features = ["derive"] }
toml = "0.5.6"
itertools = "0.9.0"
ndarray-stats = "0.3.0"
threadpool = "1.8.1"
slog = {version = "2.5.2", features = ["release_max_level_warn"]}
slog-async = "2.5.0"
slog-term = "2.6.0"
crossbeam = "0.7.3"
num_cpus = "1.13.0"
progressing = "3.0.2"
nix = "0.18.0"
libc = "0.2.77"
rayon = "1.4.0"
lzzzz = "0.8"
zstd = "0.5"
safe-transmute = "0.11.1"

#[profile.release]
#debug = true

